# dice-score-3d

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
dice_score_3d/: __init__.py  main.py  metrics.py  reader.py  readers.py
tests/: test_metrics.py  test_reader.py  test_readers.py  utils.py
